--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,6 @@
     <title>LangFlow</title>
   </head>
   <body>
-    <div id="root" class="bg-dark"></div>
+    <div id="root"></div>
   </body>
 </html>
